fixed squashed bottom row

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ html {
     border-radius: 4px;
     display: grid;
     grid-template-columns: repeat(4, 100px);
-    grid-template-rows: minmax(100px, auto) repeat(5, 80px);
+    grid-template-rows: minmax(100px, auto) repeat(6, 80px);    /*fixes squashed bottom row*/
     gap: 2px;
 }
 
